# RegressionPredictor

./: .gitignore  HANDOFF.md  README.md  TRACER-BUILD-PROMPT.md  agent-report.html  demo-report.html  demo-report2.html  expected_sample_report.html  pyproject.toml  screens.yaml  tracer-report.html
ci/: tracer-regression.yml
src/tracer/: agent.py  bridge.py  cli.py  diff.py  history.py  jira_mock.py  llm.py  loom_client.py  report.py  risk.py  screens.py
tests/: test_spine.py
