[project]
name = "tracer"
version = "0.1.0"
description = "Deterministic regression scoping for QA: git diff -> blast radius -> screens -> risk report"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "loom-tool>=0.7.0",
    "langgraph>=0.2",
    "langchain-groq>=0.2",
    "langchain>=1.0",
]

[project.scripts]
tracer = "tracer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tracer"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
